# DCS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DCS.code-workspace  README.md  dcs_validation.py  pyproject.toml  requirements.txt  run_simulations.py  rut_mbe1_model.py  streamlit_app.py
.cursor/rules/: README.md  accuracy.mdc
.playwright-mcp/: page-2026-05-30T18-32-56-526Z.yml
3RUT_MBe1/: 3RUT_Theory 1.md  run_simulations.py  rut_mbe1_model.py  simulation_utils.py
BU_3RUT/3RUT_MBe1/: 3RUT_MB_Model.py  AppendixC_D_3RTU_MD.md  README.TXT  calibrate_dcs_model.py  dcs_risk_analysis.py  dcs_risk_model.py  example_script.py  flight_profile.json  model_config.json  model_config_example.jsonc  simulation_grid_results.csv  temp_config.json
BU_Model_2025/: DCSv11.py  simulation_errors 1.csv
DCS Python Project_old/BU_2023_works/: DCS.py  DCSCalc.py  DCSCalcV2.py  DCSCalcV5.py  DCSResolution.py  DCSv05.py  DCSv10.py  DCSv8.py
DCS Python Project_old/BU_2024/: ASEMv75p749.md  DCSResolutionModel3.py  model_validation_metrics_20250128_1245.txt
DCS Python Project_old/BU_2024_2/: DCSv03.py  DCSv6.py  DCSv7.py
DCS Python Project_old/BU_project/: DCSv10.py  gradient_boosting_regressor_model.pkl
Dive_DCS/libbuhlmann-master/test/: test_all_of_the_units.py
ML model/: DCSv11.py  comprehensive_analysis.txt  dcs_simulation.py
Model_Rel_Candidate/: DCS_Risk_DB_2025.csv  DCSv10.py  Metrics.txt  README.md
NASA_model/: DCS_NASA.py  Evidence_2014.md  Evidence_2024.md  conkin-dcs-exercise_2004.md
apps/streamlit/: app.py
docs/: architecture.md  methods.md  publication-roadmap.md  runbook.md  scientific-background.md  tinydcs-original-v0.1.1-README.md  validation-hardware.md
docs/nasa_model_references/: TP-2024-BiP_Report_v16.md
docs/papers/: 2026-05-01_journal-scout_tinydcs.md  2026-05-01_journal-scout_tinydcs_q2_math-ai-compbio.md  paper-1-abstract.md  paper-1-draft.md  paper-2-scope.md
docs/papers/paper-1_cmpb/: 2026-05-01_cmpb-compliance-audit_tinydcs.md  README.md  (+8 more)
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
legacy/: DCS.code-workspace  README.md  test_rut_mbe1_model.py
legacy/3RUT_MBe1/: profile_35000ft_air_rest_history.csv
legacy/BU_Model_2025/: DCSv10.py  DCSv11.py  dcs_app.py
legacy/ML_model/: dcs_app.py  dcs_cli.py
legacy/Model_Rel_Candidate/: DCSv10.py  Model9Concordance.mc1
mechanistic/: __init__.py  adrac.py
scripts/: 01_clean_data.py  02_simulate_training.py  03_train_surrogate.py  04_train_adrac_surrogate.py  05_export_onnx.py  06_train_compact_surrogate.py  07_export_zero_inflated_onnx.py  08_personalization_demo.py  09_make_paper_figures.py  10_fair_baseline_and_ablation.py
tests/: test_adrac.py  test_data_clean.py  test_eva.py  test_eva_hil_runtime.py  test_personalization.py  test_simulator.py  test_surrogate.py
tinydcs/: __init__.py  api.py  cli.py  data_clean.py  eva.py  eva_reports.py  eva_telemetry.py  features.py  metrics.py  personalization.py  rut_reconciliation.py  simulator.py  surrogate.py
tinydcs/mission_rules/: artemis_lunar.yaml  commercial_standup.yaml  default.yaml
tools/: install-git-hooks.sh
tools/hooks/: commit-msg
(+75 files in other folders)
