[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydcs"
version = "0.6.1"
description = "Edge-deployable ML surrogate of the ADRAC altitude-DCS risk model with calibrated uncertainty."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Research-use-only (see README)" }
authors = [{ name = "Diego Malpica" }]
keywords = ["aerospace-medicine", "decompression-sickness", "machine-learning", "edge-ml", "surrogate"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.4,<2",
    "lightgbm>=4.3,<5",
    "scipy>=1.12,<2",
    "joblib>=1.3,<2",
    "pyarrow>=15",
    "matplotlib>=3.8,<4",
    "click>=8.1,<9",
    "tqdm>=4.66,<5",
    "fastapi>=0.110,<1",
    "pydantic>=2.7,<3",
    "uvicorn>=0.29,<1",
    "PyYAML>=6,<7",
    "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]
edge = [
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "skl2onnx>=1.16",
]

[project.scripts]
tinydcs-clean = "tinydcs.cli:clean"
tinydcs-simulate = "tinydcs.cli:simulate"
tinydcs-train = "tinydcs.cli:train"

[tool.setuptools.packages.find]
include = ["tinydcs*"]

[tool.setuptools.package-data]
tinydcs = ["mission_rules/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
